--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <!-- Icon Library -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
+    
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento|Megrim" rel="stylesheet">
 
     <!-- jQuery -->
     <script src="vendor/jquery/v2.2.4/jquery-2.2.4.min.js"         type="text/javascript"></script>
@@ -39,7 +42,7 @@
 
   <body ng-app="hexapawnApp">
 
-    <div ng-view></div>
+    <div ng-view id="app_screen"></div>
 
   </body> 
 
