--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <script src="vendor/angular/angular-1.4.9/angular-route.js"    type="text/javascript"></script>
     <script src="vendor/angular/angular-1.4.9/angular-resource.js" type="text/javascript"></script>
 
-    <!-- CORE SERVICES -->
+    <!-- SERVICES -->
     <script src="core/services/i18n/i18n.js"                       type="text/javascript"></script>
-
+        
+    <!-- COMPONENTS -->
     <script src="components/welcome/welcome.module.js"             type="text/javascript"></script>
     <script src="components/welcome/welcome.component.js"          type="text/javascript"></script>
 
