Added responsive UI breaks

--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -1,5 +1,5 @@
-<h3>{{playerNames[0]}}</h3>
-<h4>move x:</h4>
+<h3>{{playerNames[0]}}:<br> move x</h3>
+<!--h4>move x:</h4-->
 
 <div id="board-container">
   <table id="board">
