--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -6,18 +6,18 @@
 
     <tr> <!--(Row 3)-->
       <td class="dark tile top-left">
-        <div class="white pawn" ng-if="boardState.substring(0, 1) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(0, 1) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(6, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(6, 1) === 'B'">&#9823;</div>
         <div class="cell-label">a3</div>
       </td> <!-- cell a3 -->
       <td class="tile top-center">
-        <div class="white pawn" ng-if="boardState.substring(1, 2) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(1, 2) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(7, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(7, 1) === 'B'">&#9823;</div>
         <div class="cell-label">b3</div>
       </td> <!-- cell b3 -->
       <td class="dark tile top-right">
-        <div class="white pawn" ng-if="boardState.substring(2, 3) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(2, 3) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(8, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(8, 1) === 'B'">&#9823;</div>
         <div class="cell-label">c3</div>
       </td> <!-- cell c3 -->
 
@@ -25,18 +25,18 @@
 
     <tr> <!--(Row 2)-->
       <td class="tile middle-left">
-        <div class="white pawn" ng-if="boardState.substring(3, 4) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(3, 4) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(3, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(3, 1) === 'B'">&#9823;</div>
         <div class="cell-label">a2</div>
       </td> <!-- cell a2 -->
       <td class="dark tile middle-center">
-        <div class="white pawn" ng-if="boardState.substring(4, 5) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(4, 5) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(4, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(4, 1) === 'B'">&#9823;</div>
         <div class="cell-label">b2</div>
       </td> <!-- cell b2 -->
       <td class="tile middle-right">
-        <div class="white pawn" ng-if="boardState.substring(5, 6) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(5, 6) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(5, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(5, 1) === 'B'">&#9823;</div>
         <div class="cell-label">c2</div>
       </td> <!-- cell c2 -->
 
@@ -44,18 +44,18 @@
 
     <tr> <!--(Row 1)-->
       <td class="dark tile bottom-left">
-        <div class="white pawn" ng-if="boardState.substring(6, 7) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(6, 7) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(0, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(0, 1) === 'B'">&#9823;</div>
         <div class="cell-label">a1</div>
       </td> <!-- cell a1 -->
       <td class="tile bottom-center">
-        <div class="white pawn" ng-if="boardState.substring(7, 8) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(7, 8) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(1, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(1, 1) === 'B'">&#9823;</div>
         <div class="cell-label">b1</div>
       </td> <!-- cell b1 -->
       <td class="dark tile bottom-right">
-        <div class="white pawn" ng-if="boardState.substring(8, 9) === 'W'">&#9823;</div>
-        <div class="black pawn" ng-if="boardState.substring(8, 9) === 'B'">&#9823;</div>       
+        <div class="white pawn" ng-if="boardState.substr(2, 1) === 'W'">&#9823;</div>
+        <div class="black pawn" ng-if="boardState.substr(2, 1) === 'B'">&#9823;</div>
         <div class="cell-label">c1</div>
       </td> <!-- cell c1 -->
     </tr>
@@ -64,8 +64,8 @@
 
 </div>
 
-<div id="moves">  
+<div id="moves">
   <span ng-repeat="(id, m) in moves">
-    <button class="{{'move-' + id}}">{{m}}</button>      
+    <button class="{{'move-' + id}}">{{m}}</button>
   </span>
 </div>
