Exploration and dissapointment
I haven’t been able to correctly generate all legal boards yet.

--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -7,7 +7,7 @@
 </h3>
 
 <h3 ng-if="game.victory == ' ' && game.moves.length == 0">
-  {{i18n.TIE}}
+  {{i18n.NO_MOVE_FOR}}<br>{{game.players[game.currentPlayer].name}}
 </h3>
 
 
