Modularized directives, refactored them into modules, create hxpBrain

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <script src="core/services/GameLogic/GameLogic.js"             type="text/javascript"></script>
     <script src="core/services/ReadJSON/ReadJSON.js"               type="text/javascript"></script>
 
+    <!-- DIRECTIVES -->
+    <script src="core/directives/hxpBoard/hxpBoard.module.js"      type="text/javascript"></script>
+    <script src="core/directives/hxpBoard/hxpBoard.directive.js"   type="text/javascript"></script>
+
+    <script src="core/directives/hxpBrain/hxpBrain.module.js"      type="text/javascript"></script>
+    <script src="core/directives/hxpBrain/hxpBrain.directive.js"   type="text/javascript"></script>
+
     <!-- COMPONENTS -->
     <script src="components/welcome/welcome.module.js"             type="text/javascript"></script>
     <script src="components/welcome/welcome.component.js"          type="text/javascript"></script>
