Debugged the brain
Whee!

--- a/core/directives/hxpBrain/hxpBrain.template.html
+++ b/core/directives/hxpBrain/hxpBrain.template.html
@@ -1,18 +1,19 @@
 <div class="hxp-brain-{{player}}">
 
-  <div class="hxp-brain-board-moves" ng-repeat="b in boards">
+  <span class="hxp-brain-board-moves" ng-repeat="b in boards">
 
-    <div class="move-1-on" ng-if="b.moves.length > 0">1</div>
-    <div class="move-1-off" ng-if="b.moves.length < 1">0</div>
+    <span class="move-1-on" ng-if="b.moves.length > 0">1</span>
+    <span class="move-1-off" ng-if="b.moves.length < 1">0</span>
 
-    <div class="move-2-on" ng-if="b.moves.length > 1">1</div>
-    <div class="move-2-off" ng-if="b.moves.length < 2">0</div>
+    <span class="move-2-on" ng-if="b.moves.length > 1">1</span>
+    <span class="move-2-off" ng-if="b.moves.length < 2">0</span>
 
-    <div class="move-3-on" ng-if="b.moves.length > 2">1</div>
-    <div class="move-3-off" ng-if="b.moves.length < 3">0</div>
+    <span class="move-3-on" ng-if="b.moves.length > 2">1</span>
+    <span class="move-3-off" ng-if="b.moves.length < 3">0</span>
 
-    <div class="move-4-on" ng-if="b.moves.length > 3">1</div>
-    <div class="move-4-off" ng-if="b.moves.length < 4">0</div>
+    <span class="move-4-on" ng-if="b.moves.length > 3">1</span>
+    <span class="move-4-off" ng-if="b.moves.length < 4">0</span>
 
-  </div>
+  </span>
+
 </div>
