--- a/core/directives/hxpBrain/hxpBrain.template.html
+++ b/core/directives/hxpBrain/hxpBrain.template.html
@@ -1,6 +1,6 @@
 <div class="hxp-brain-{{player}}">
 
-  <span class="hxp-brain-board-moves" ng-repeat="b in boards">
+  <span class="hxp-brain-board-moves" ng-repeat="b in learningStates">
 
     <span class="move-1-on" ng-if="b.moves.length > 0">&bullet;</span>
     <span class="move-1-off" ng-if="b.moves.length < 1">&bullet;</span>
