added ngAudio and finished debugging AI vs AI

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src="vendor/angular/angular-1.4.9/angular-route.js"    type="text/javascript"></script>
     <script src="vendor/angular/angular-1.4.9/angular-resource.js" type="text/javascript"></script>
 
+    <!-- AUDIO -->
+    <script src="vendor/danielstern/ngAudio/app/angular.audio.js"  type="text/javascript"></script>
+
     <!-- SERVICES -->
     <script src="core/services/i18n/i18n.js"                       type="text/javascript"></script>
     <script src="core/services/GameLogic/GameLogic.js"             type="text/javascript"></script>
