--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -5,14 +5,17 @@
 </h3>
 
 <h3 ng-if="game.victory != ' ' && game.victory != 'R'">
+  {{i18n.GAME + ' ' + game.number}},
   {{game.players[game.currentPlayer].name + ' ' + i18n.VICTORY}}
 </h3>
 
 <h3 ng-if="game.victory == 'R'">
+  {{i18n.GAME + ' ' + game.number}},
   {{game.players[game.currentPlayer].name + ' ' + i18n.RESIGNS}}
 </h3>
 
 <h3 ng-if="game.victory == ' ' && game.boardMoves.length == 0">
+  {{i18n.GAME + ' ' + game.number}},
   {{game.players[game.currentPlayer].name}} {{i18n.NO_MOVE_FOR}}
 </h3>
 
@@ -84,13 +87,15 @@
   <span  ng-if="game.players[game.currentPlayer].type === 'human'" ng-repeat="(id, m) in game.boardMoves">
     <button class="{{'move-' + id}}" ng-click="doMove({move: m})">{{m}}</button>
   </span>
-  <span  ng-if="game.victory == ' ' && game.players[game.currentPlayer].type === 'ai'">
+  <span  ng-if="game.victory == ' ' && game.players[game.currentPlayer].type === 'ai' && gameType == 'huvsai'">
     <button class="{{'move-' + id}}" ng-click="aiMove()">{{i18n.RANDOM_MOVE}}</button>
   </span>
   <span id="game-over" ng-if="game.boardMoves.length === 0">
     <button ng-click="newGame()">{{i18n.NEW_GAME}}</button>
-    <button ng-click="exportJson()" ng-if="gameType !== 'huvshu'">{{i18n.EXPORT_JSON}}</button>
+    <button ng-click="showBlackLogic()" ng-if="gameType !== 'huvshu'" class="black_button">{{i18n.SHOW_LOGIC}}</button>
+    <button ng-click="showWhiteLogic()" ng-if="gameType == 'aivsai'" class="white_button">{{i18n.SHOW_LOGIC}}</button>
+    <button ng-click ="returnToMainMenu()" ng-if="gameType == 'aivsai'">{{i18n.RETURN_TO_MAIN_MENU}}</button>
   </span>
-  <button ng-click ="returnToMainMenu()">{{i18n.RETURN_TO_MAIN_MENU}}</button>
+  <button ng-click ="returnToMainMenu()" ng-if="gameType !== 'aivsai'">{{i18n.RETURN_TO_MAIN_MENU}}</button>
 </div>
 
