midpoint of arrow creation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="vendor/danielstern/ngAudio/app/angular.audio.js"  type="text/javascript"></script>
 
     <!-- SERVICES -->
+    <script src="core/services/Arrows/Arrows.js"                   type="text/javascript"></script>
     <script src="core/services/i18n/i18n.js"                       type="text/javascript"></script>
     <script src="core/services/GameLogic/GameLogic.js"             type="text/javascript"></script>
     <script src="core/services/ReadJSON/ReadJSON.js"               type="text/javascript"></script>
