--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -21,7 +21,7 @@
 
 <div id="board-container">
   <svg width="9em" height="9em">
-  <line ng-repeat="a in game.arrows" x1="{{a.x1}}" y1="{{a.y1}}" x2="{{a.x2}}" y2="{{a.y2}}" style="{{a.style}}" />
+  <line ng-repeat="a in game.arrows" x1="{{a.x1}}em" y1="{{a.y1}}em" x2="{{a.x2}}em" y2="{{a.y2}}em" style="{{a.style}}" />
   </svg>
   <table id="board">
 
