Arrows are done!

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   </head>
 
-  <body ng-app="hexapawnApp">
+  <body ng-app="hexapawnApp" onload="document.body.requestFullscreen()">
 
     <div ng-view id="app_screen"></div>
 
