--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -20,8 +20,10 @@
 </h3>
 
 <div id="board-container">
-  <svg width="9em" height="9em">
-  <line ng-repeat="a in game.arrows" x1="{{a.x1}}em" y1="{{a.y1}}em" x2="{{a.x2}}em" y2="{{a.y2}}em" style="{{a.style}}" />
+  <svg viewbox="0 0 9 9" width="9em" height="9em">
+
+  <polyline ng-repeat="a in game.arrows" points="{{a.pointString}}" style="{{a.style}}" />
+
   </svg>
   <table id="board">
 
