Show Logic completed!

--- a/core/directives/hxpBoard/hxpBoard.template.html
+++ b/core/directives/hxpBoard/hxpBoard.template.html
@@ -1,11 +1,11 @@
-<div id="board-container">
+<div class="board-container">
   <svg viewbox="0 0 9 9" width="9em" height="9em">
 
   <polyline ng-repeat="a in arrows" points="{{a.pointString}}" style="{{a.style}}" />
 
   </svg>
 
-  <table id="board">
+  <table class="board">
 
     <tr> <!--(Row 3)-->
       <td class="dark tile top-left">
