--- a/core/directives/hxpMoves/hxpMoves.template.html
+++ b/core/directives/hxpMoves/hxpMoves.template.html
@@ -1,4 +1,4 @@
-<div id="moves">
+<div class="moves">
 
   <span  ng-if="game.players[game.currentPlayer].type === 'human'"
          ng-repeat="(id, m) in game.boardMoves">
