--- a/core/directives/hxpShowLogic/hxpShowLogic.template.html
+++ b/core/directives/hxpShowLogic/hxpShowLogic.template.html
@@ -1,15 +1,19 @@
-<table>
-  <tr ng-repeat="b in game.players[player].currentBoards">
-    <td>{{b.board}}
-    </td>
-    <td>
-      <ul>
-        <li ng-repeat="m in b.moves">{{m}}</li>
-      </ul>
-    </td>
-  </tr>
+<h3>{{i18n.LOGIC_FOR + ' ' + playerName}}</h3>
+
+<table  >
+  <tr ng-repeat="b in boards"    >
+    <td  >
+  <hxp-board boardstate="b.board             "
+             arrows="b.arrows" />
+</td>
+<td class="moves"  >
+  <span  ng-repeat="(id, m) in b.moves"      >
+    <button class="{{'move-' + id}}" disabled>{{m}}</button    >
+  </span  >
+</td>
+</tr>
 </table>
 
-<div id="moves">
+<div class="moves">
   <button ng-click="hideLogic()">{{i18n.HIDE_LOGIC}}</button>
 </div>
