--- a/core/directives/hxpGameHeader/hxpGameHeader.template.html
+++ b/core/directives/hxpGameHeader/hxpGameHeader.template.html
@@ -4,7 +4,7 @@
   {{game.players[game.currentPlayer].name}}
 </h3>
 
-<h3 ng-if="game.victory != ' ' && game.victory != 'R'">
+<h3 ng-if="game.victory != ' ' && game.victory != 'R' && game.victory != 'T'">
   {{i18n.GAME + ' ' + game.number}},
   {{game.players[game.currentPlayer].name + ' (' + game.victory + ') ' + i18n.VICTORY}}
 </h3>
@@ -14,7 +14,7 @@
   {{game.players[game.currentPlayer].name + ' ' + i18n.RESIGNS}}
 </h3>
 
-<h3 ng-if="game.victory == ' ' && game.boardMoves.length == 0">
+<h3 ng-if="game.victory == 'T' && game.boardMoves.length == 0">
   {{i18n.GAME + ' ' + game.number}},
   {{game.players[game.currentPlayer].name}} {{i18n.NO_MOVE_FOR}}
 </h3>
